# talc

./: Cargo.toml  README.md
elfine/: Cargo.toml
elfine/src/: lib.rs
lisn-common/: Cargo.toml
lisn-common/src/: lib.rs
peline/: Cargo.toml
peline/src/: lib.rs
talc-aarch64/: Cargo.toml
talc-aarch64/src/: lib.rs
talc-common/: Cargo.toml
talc-common/src/: lib.rs
talc-felf/: Cargo.toml
talc-felf/src/: lib.rs
talc-malbolge-frontend/: Cargo.toml
talc-malbolge-frontend/src/: impls.rs  lib.rs  meld.rs  ops.rs
talc-mimd/: Cargo.toml
talc-mimd/src/: lib.rs
talc-mips/: Cargo.toml
talc-mips/src/: lib.rs
talc-riscv/: Cargo.toml
talc-riscv/src/: lib.rs
talc-x86/: Cargo.toml
talc-x86/src/: lib.rs
talc-xax/: Cargo.toml
talc-xax/src/: lib.rs
