[workspace]
members=[  "talc-common","talc-riscv","talc-aarch64", "talc-felf","talc-x86", "talc-mimd", "talc-malbolge-frontend"] 
# , "talc-x86","talc-aarch64",
resolver="2"

[workspace.dependencies]


portal-pc-waffle = "0.3.2"
waffle-ast = "0.4"

arena-traits = { version = "0.2.1", features = ["id-arena"] }
cfg-traits = "0.2.1"
id-arena = "2.2.1"
ssa-traits = "0.2.1"
ssa-impls = "0.2.1"