[package]
name = "talc-common"
version = "0.1.0"
edition = "2021"

[dependencies]
bitvec = "1.0.1"
paste = "1.0.15"
portal-pc-asm-common = { version = "0.1.0", features = ["alloc","serde"] }
portal-pc-waffle.workspace = true
serde = "1.0.217"
typenum = { version = "1.17.0", features = ["const-generics"] }
waffle-ast.workspace = true
